# solo5

bindings/SeL4/: CMakeLists.txt  README.md  update.sh
bindings/SeL4/projects/Solo5/: CMakeLists.txt
bindings/SeL4/projects/Solo5/src/: Solo5Client.c  Solo5Client.h  main.c  solo5.c
